kubernetes/miniflux/deps/postgres-secret-holder.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: miniflux
  name: &n miniflux-postgres-secret-holder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *n
  template:
    metadata:
      labels:
        app: *n
    spec:
      serviceAccount: *n
      volumes:
        - name: &s miniflux-postgres-secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: *s
      containers:
        - name: *n
          image: busybox:latest
          command: ["sleep", "infinity"]
          volumeMounts:
            - name: *s
              mountPath: /secret
              readOnly: true
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources: {}
